# sentry-rust

./: Cargo.toml
sentry/: Cargo.toml
sentry-cf-worker/: Cargo.toml
sentry-cf-worker/src/: lib.rs
sentry-contexts/: Cargo.toml
sentry-contexts/src/: integration.rs  utils.rs
sentry-core/: Cargo.toml
sentry-core/src/: constants.rs  lib.rs  macros.rs  session.rs
sentry-types/: Cargo.toml
sentry-types/src/: auth.rs  dsn.rs  macros.rs  project_id.rs  utils.rs
sentry-types/src/protocol/: attachment.rs  envelope.rs  session.rs  v7.rs
sentry-types/tests/: test_auth.rs  test_protocol_v7.rs
sentry/src/transports/: ratelimit.rs  reqwest.rs
