[package]
name = "sentry-cf-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentry-core = { path = "../sentry-core" }
surf = { version = "2", default-features = false, features = ["wasm-client"] }
worker = { version = "0.0.9" }
